--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+# 首先感谢Zhuang Ma的分享，我fork后主要用于记录学习笔记使用，
+# 所以关闭了评论等功能，为了编译后期维护，所有我关闭的功能全部
+# 使用双井号进行注释。
 # ---------------- #
 #   Main Configs   #
 # ---------------- #
@@ -25,7 +28,7 @@ components:
     # 不蒜子访问统计
     busuanzi:
         enabled: true
-        start_date: 2020-05-03
+        start_date: 2021-03-18
     # My Popular Repositories
     side_bar_repo:
         enabled: true
@@ -117,27 +120,27 @@ collections:
 #      Comments    #
 # ---------------- #
 # support provider: disqus, gitment, gitalk
-comments_provider: gitalk
+##comments_provider: gitalk
 # !!!重要!!! 请修改下面这些信息为你自己申请的
 # !!!Important!!! Please modify infos below to yours
 # https://disqus.com
-disqus:
-    username: 
+##disqus:
+##    username: 
 # https://imsun.net/posts/gitment-introduction/
-gitment:
-    owner: 
-    repo: 
-    oauth:
-        client_id: 
-        client_secret: 
+##gitment:
+##   owner: 
+##    repo: 
+##    oauth:
+##        client_id: 
+##        client_secret: 
 # https://github.com/gitalk/gitalk#install
-gitalk:
-    owner: 
-    repo: 
-    clientID: 
-    clientSecret: 
+##gitalk:
+##   owner: 
+##   repo: 
+##    clientID: 
+##    clientSecret: 
 # 在使用其它评论组件时可点击显示 Disqus
-lazy_load_disqus : false
+##lazy_load_disqus : false
 
 # ---------------- #
 #      Search      #
@@ -151,10 +154,10 @@ simple_jekyll_search:
 # ---------------- #
 #      Google      #
 # ---------------- #
-google:
-    analytics_id: 
-    adsense:
-        footer: true
-        sidebar: true 
-        content_header: true
-        content_footer: false
+##google:
+##    analytics_id: 
+##    adsense:
+##        footer: true
+##        sidebar: true 
+##        content_header: true
+##        content_footer: false
